libmlx4 (1.0.1-2) UNRELEASED; urgency=low

  * Update maintainer and set DM-Upload-Allowed to yes.  (Closes: #632108)
  * Switch to dpkg-source 3.0 (quilt) format.
  * Don't ship .la files.  (Closes: #621664)

 -- Roland Dreier <roland@localhost>  Wed, 06 Jul 2011 01:17:18 -0700

libmlx4 (1.0.1-1) unstable; urgency=low

  * Add debian/watch file.
  * Move -dbg package to section debug.
  * Update to Standards-Version: 3.8.2.
  * New upstream release.
    - Fix potential problems running under Valgrind.
    - Add support for resize CQ operation.
    - Fix other minor bugs.

 -- Roland Dreier <rolandd@cisco.com>  Wed, 17 Jun 2009 10:56:33 -0700

libmlx4 (1.0-1) unstable; urgency=low

  * Initial release.  (Closes: #456355)

 -- Roland Dreier <rolandd@cisco.com>  Fri, 14 Dec 2007 09:51:39 -0800